hphp/hack/test/sound_dynamic/typing/push_like.bad.php.exp
File "push_like.bad.php", line 24, characters 10-35:
Invalid return type (Typing[4110])
  File "push_like.bad.php", line 23, characters 33-35:
  Expected `int`
  File "push_like.bad.php", line 19, characters 16-19:
  But got `dynamic`
File "push_like.bad.php", line 29, characters 10-11:
Invalid return type (Typing[4110])
  File "push_like.bad.php", line 27, characters 26-28:
  Expected `int`
  File "push_like.bad.php", line 19, characters 16-19:
  But got `dynamic`
File "push_like.bad.php", line 37, characters 10-11:
Invalid return type (Typing[4110])
  File "push_like.bad.php", line 32, characters 46-46:
  Expected `C`
  File "push_like.bad.php", line 32, characters 46-46:
  This type argument to `Box` must match exactly (it is invariant)
  File "push_like.bad.php", line 32, characters 34-34:
  But got `B`
